--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,18 @@
     <!-- Map -->
     <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' />
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZSRC2TBKZX"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-ZSRC2TBKZX');
+    </script>
+
 </head>
 
 <body>
